--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 docutils==0.19
 idna==3.4
-Kivy==2.2.0
+Kivy==master
 Kivy-Garden==0.1.5
-kivymd==1.2.0
+kivymd==master
 Pillow==9.4.0
 Pygments==2.14.0
 requests==2.28.2
